Fix calculation rollingDelta